{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 31,
  "lineage": "a4043431-33a5-cf3c-14d5-ffcee4fa186a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eipvpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e320b10c483beeb4",
            "domain": "vpc",
            "id": "eipalloc-0e320b10c483beeb4",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-235-249-28.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.249.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eipvpc2"
            },
            "tags_all": {
              "Name": "eipvpc2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0700df939e7249d03",
            "arn": "arn:aws:ec2:ap-south-1:122618150886:instance/i-07306b9292b720e9d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07306b9292b720e9d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "new_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09eb4a1b66d36491a",
            "private_dns": "ip-10-0-1-199.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.199",
            "public_dns": "ec2-3-6-39-217.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.39.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01048326adeb758cf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0bf05d705a8416509"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb639c1a7cbb2a3a",
            "tags": {
              "Name": "BastionServer"
            },
            "tags_all": {
              "Name": "BastionServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bf05d705a8416509"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.publicsubnetvpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igwvpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122618150886:internet-gateway/igw-01987fe947a9f72b3",
            "id": "igw-01987fe947a9f72b3",
            "owner_id": "122618150886",
            "tags": {
              "Name": "vpc2igw"
            },
            "tags_all": {
              "Name": "vpc2igw"
            },
            "vpc_id": "vpc-0019c477b5114b0e0"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gwvpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e320b10c483beeb4",
            "association_id": "eipassoc-0fc481878f5dfbe59",
            "connectivity_type": "public",
            "id": "nat-0ddd1251cec307c07",
            "network_interface_id": "eni-0823689df541febc0",
            "private_ip": "10.0.1.158",
            "public_ip": "13.235.249.28",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cb639c1a7cbb2a3a",
            "tags": {
              "Name": "igwNATvpc2"
            },
            "tags_all": {
              "Name": "igwNATvpc2"
            }
          },
          "dependencies": [
            "aws_eip.eipvpc2",
            "aws_subnet.publicsubnetvpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateroutevpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122618150886:route-table/rtb-0647fea7c72706728",
            "id": "rtb-0647fea7c72706728",
            "owner_id": "122618150886",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ddd1251cec307c07",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privateroutevpc2"
            },
            "tags_all": {
              "Name": "privateroutevpc2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0019c477b5114b0e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eipvpc2",
            "aws_nat_gateway.nat-gwvpc2",
            "aws_subnet.publicsubnetvpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicroutevpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122618150886:route-table/rtb-09188d12dca2a7648",
            "id": "rtb-09188d12dca2a7648",
            "owner_id": "122618150886",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01987fe947a9f72b3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicroutevpc2"
            },
            "tags_all": {
              "Name": "publicroutevpc2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0019c477b5114b0e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igwvpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-associationvpc2_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c308fcdd67889ca",
            "route_table_id": "rtb-0647fea7c72706728",
            "subnet_id": "subnet-0b6c46a812231a1cf"
          },
          "dependencies": [
            "aws_eip.eipvpc2",
            "aws_nat_gateway.nat-gwvpc2",
            "aws_route_table.privateroutevpc2",
            "aws_subnet.privatesubnetvpc2_az1",
            "aws_subnet.publicsubnetvpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-associationvpc2_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088e74788db0feaf7",
            "route_table_id": "rtb-0647fea7c72706728",
            "subnet_id": "subnet-07e33fdacf6fa4afc"
          },
          "dependencies": [
            "aws_eip.eipvpc2",
            "aws_nat_gateway.nat-gwvpc2",
            "aws_route_table.privateroutevpc2",
            "aws_subnet.privatesubnetvpc2_az2",
            "aws_subnet.publicsubnetvpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-associationvpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f08b0aa3ab70d92b",
            "route_table_id": "rtb-09188d12dca2a7648",
            "subnet_id": "subnet-0cb639c1a7cbb2a3a"
          },
          "dependencies": [
            "aws_internet_gateway.igwvpc2",
            "aws_route_table.publicroutevpc2",
            "aws_subnet.publicsubnetvpc2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122618150886:security-group/sg-0bf05d705a8416509",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bf05d705a8416509",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access to public",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access to public",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access to public",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "122618150886",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0019c477b5114b0e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnetvpc2_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122618150886:subnet/subnet-0b6c46a812231a1cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6c46a812231a1cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122618150886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privatevpc2_az1",
              "kubernetes.io/cluster/ed-eks-01": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "privatevpc2_az1",
              "kubernetes.io/cluster/ed-eks-01": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0019c477b5114b0e0"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatesubnetvpc2_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122618150886:subnet/subnet-07e33fdacf6fa4afc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e33fdacf6fa4afc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122618150886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privatevpc2_az2",
              "kubernetes.io/cluster/ed-eks-01": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "privatevpc2_az2",
              "kubernetes.io/cluster/ed-eks-01": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0019c477b5114b0e0"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnetvpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122618150886:subnet/subnet-0cb639c1a7cbb2a3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb639c1a7cbb2a3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122618150886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "publicvpc2",
              "kubernetes.io/cluster/ed-eks-01": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "publicvpc2",
              "kubernetes.io/cluster/ed-eks-01": "shared",
              "kubernetes.io/role/elb": "1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0019c477b5114b0e0"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:122618150886:vpc/vpc-0019c477b5114b0e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc42adf2cead9d68",
            "default_route_table_id": "rtb-0b2948265e6a03b92",
            "default_security_group_id": "sg-092486f11ec3e6deb",
            "dhcp_options_id": "dopt-0003e3039ae1c5e08",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0019c477b5114b0e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b2948265e6a03b92",
            "owner_id": "122618150886",
            "tags": {
              "Name": "vpc2"
            },
            "tags_all": {
              "Name": "vpc2"
            }
          }
        }
      ]
    }
  ]
}